--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Pomelo</string>
+    <string name="refresh_success">刷新成功</string>
+    <string name="jay">Jay</string>
+    <string name="song_night_seven">夜的第七章</string>
 </resources>
